@@ -3,6 +3,6 @@ DIST freenet-r15122-snapshot.jar 2131696 RMD160 416483369415688b6dcf090e3e4f2246
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-bin-0.7.1061-r1.ebuild 2923 RMD160 deffa9bc72a9dce34b8ab6f5550c132eaa4e639c SHA1 8a79d3775a75e37aedb8c89cdb0f067eb3b63e75 SHA256 4fb2388307be6d95ea1d7ae8dac0a223fa69367ad2a248b106bf2ad14237eec7
-MISC ChangeLog 2366 RMD160 d095b497feeb2bf8c5bd1a8673681fdfef0caecc SHA1 cafba29bbab44564b3a87408c622369d5ab10d82 SHA256 518d27c3530e37201141c413063f02cabe0f1302b8553cf8879fb239ac66acd5
+EBUILD freenet-bin-0.7.1061-r1.ebuild 2908 RMD160 801b31ebe4daecc5b9e37f41ec7e4002e6d710ca SHA1 a33937d22142d6aeed2a7a295fb1404a45da8af8 SHA256 115a761d59ef686c181d8782be1e465874139d1468b6d057b1fa3ebdc2563c67
+MISC ChangeLog 2664 RMD160 9b0080f1f3ac5463da283dfc86f67fcd0cc1040c SHA1 cfa0125693f4a8fbb9689f66be91119797e45243 SHA256 99dd56f6661ba29e39f4540f66df787864347527b1a5a981f70f922a5a42d436
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
