@@ -2,6 +2,6 @@ DIST freenet-sources-v1061.tar.bz2 19097871 RMD160 a16da17acfdfb8fb06ec0739c0dc2
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-0.7.1061-r1.ebuild 2744 RMD160 b1d819da590ec4f0f0799a049d8f4c9bc4e553c0 SHA1 02302e157a47285f544e698b991e5a6e92a7213d SHA256 9f80e7e6cb593331dd74b9c07186800d3b466e44968c1c8cb099ce6400b15996
-MISC ChangeLog 1332 RMD160 17e6f5b54a1bbc123e96b1c3c4b1e010dcd7bad5 SHA1 9ae27272a33ed6a230098e4a9f38027363c28730 SHA256 c474375b69077695c37d82df2440a94a7438fb47d1aae1583c3804aff1f531ef
+EBUILD freenet-0.7.1061-r1.ebuild 2729 RMD160 5faf6029505bea3abd84b66d800c0c2e9745b7f7 SHA1 95607474295d9d666957877745cacac0a803c2f9 SHA256 91df8d989a3677d57f870935be40f3214a1328de83c5fda13eab2d10bdb51d18
+MISC ChangeLog 1482 RMD160 77bd705a7e7fe917ffe4e9408a09934c70ce9ad3 SHA1 126b7addbf908060cd855717e61a509096804260 SHA256 a4c989d08c96697d36ad22f493768158f6e9d8413da5804f83be85b909327781
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
